# ember-query

./: Cargo.toml  README.md
docs/: data-model.md  implementation-guide.md  spec.md  tech-stack.md
docs/adr/: ADR-001-language-choice.md  ADR-002-parser-choice.md  ADR-003-columnar-format.md  ADR-004-single-thread-first.md
src/: catalog.rs  display.rs  lib.rs  main.rs
src/executor/: csv_scan.rs  filter.rs  hash_agg.rs  join.rs  join_test.rs  limit.rs  mod.rs  project.rs  sort.rs
src/planner/: logical.rs  mod.rs  physical.rs
src/sql/: ast.rs  grammar.pest  parser.rs
tests/: integration_test.rs
tests/fixtures/: sample.csv
